# qcl-simulation-lab

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
examples/: basic_simulation.py
src/qcl_sim/: __init__.py  __main__.py
src/qcl_sim/core/: band_structure.py  gain.py  scattering.py  transport.py
src/qcl_sim/devices/: qcl_device.py
src/qcl_sim/materials/: database.py
tests/: test_device.py
