[project]
name = "qcl-sim"
version = "0.1.0"
description = "Quantum Cascade Laser Simulation Laboratory - A comprehensive Python framework for QCL physics simulation"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "h5py>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "hypothesis>=6.80",
    "ruff==0.1.15",
    "pre-commit>=3.3",
    "mypy>=1.4",
]

[project.scripts]
qcl-sim = "qcl_sim.__main__:main"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C90", # mccabe
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # Ruff rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=qcl_sim --cov-report=xml --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "hypothesis>=6.80.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "ruff==0.1.15",
]
