[project]
name = "qcl-sim"
version = "0.1.0"
description = "Quantum Cascade Laser Simulation Laboratory"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "h5py>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "hypothesis>=6.80",
    "ruff==0.1.15",
    "pre-commit>=3.3",
    "mypy>=1.4",
]

[project.scripts]
qcl-sim = "qcl_sim.__main__:main"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
exclude = [".git", ".venv", ".idea", ".mypy_cache", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C90", "SIM", "PT", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=qcl_sim --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "hypothesis>=6.80.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "ruff==0.1.15",
]
